--- a/index.html
+++ b/index.html
@@ -4,48 +4,48 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<!-- Save for Web Slices (LizardExperience2013-1) -->
-<table id="Table_01" width="704" height="842" border="0" cellpadding="0" cellspacing="0">
+<!-- Save for Web Slices (Untitled-1) -->
+<table id="Table_01" width="695" height="831" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td colspan="5">
-			<a href="http://www.lizard.net/aanmelden2013/">
-				<img src="images/LizardExperience2013-1_01.gif" width="703" height="672" border="0" alt=""></a></td>
+			<a href="www.lizard.net/aanmelden2013">
+				<img src="images/LizardExperience2013-1_01.gif" width="694" height="659" border="0" alt=""></a></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="672" alt=""></td>
+			<img src="images/spacer.gif" width="1" height="659" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="3">
-			<img src="images/LizardExperience2013-1_02.gif" width="421" height="39" alt=""></td>
+			<img src="images/LizardExperience2013-1_02.gif" width="413" height="41" alt=""></td>
 		<td rowspan="2">
 			<a href="http://www.lizard.net/aanmelden2013/">
-				<img src="images/LizardExperience2013-1_03.gif" width="198" height="48" border="0" alt=""></a></td>
+				<img src="images/LizardExperience2013-1_03.gif" width="203" height="53" border="0" alt=""></a></td>
 		<td rowspan="4">
-			<img src="images/LizardExperience2013-1_04.gif" width="84" height="170" alt=""></td>
+			<img src="images/LizardExperience2013-1_04.gif" width="78" height="172" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="39" alt=""></td>
+			<img src="images/spacer.gif" width="1" height="41" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="3">
-			<img src="images/LizardExperience2013-1_05.gif" width="90" height="131" alt=""></td>
+			<img src="images/LizardExperience2013-1_05.gif" width="89" height="131" alt=""></td>
 		<td rowspan="2">
 			<a href="http://www.lizard.net/lizardexperience/">
-				<img src="images/LizardExperience2013-1_06.gif" width="84" height="17" border="0" alt=""></a></td>
+				<img src="images/LizardExperience2013-1_06.gif" width="83" height="22" border="0" alt=""></a></td>
 		<td rowspan="3">
-			<img src="images/LizardExperience2013-1_07.gif" width="247" height="131" alt=""></td>
+			<img src="images/LizardExperience2013-1_07.gif" width="241" height="131" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="9" alt=""></td>
+			<img src="images/spacer.gif" width="1" height="12" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="2">
-			<img src="images/LizardExperience2013-1_08.gif" width="198" height="122" alt=""></td>
+			<img src="images/LizardExperience2013-1_08.gif" width="203" height="119" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="8" alt=""></td>
+			<img src="images/spacer.gif" width="1" height="10" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/LizardExperience2013-1_09.gif" width="84" height="114" alt=""></td>
+			<img src="images/LizardExperience2013-1_09.gif" width="83" height="109" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="114" alt=""></td>
+			<img src="images/spacer.gif" width="1" height="109" alt=""></td>
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
