--- a/index.html
+++ b/index.html
@@ -1,51 +1,52 @@
 <html>
 <head>
+
 <title>Lizard Experience (uitnodiging)</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<!-- Save for Web Slices (Untitled-1) -->
-<table id="Table_01" width="695" height="831" border="0" cellpadding="0" cellspacing="0">
+<!-- Save for Web Slices (UitnodigingLizard_2013_v4.psd) -->
+<table id="Table_01" width="704" height="866" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td colspan="5">
 			<a href="www.lizard.net/aanmelden2013">
-				<img src="images/LizardExperience2013-1_01.gif" width="694" height="659" border="0" alt=""></a></td>
+				<img src="images/LizardExperience2013-1_01.gif" width="703" height="682" border="0" alt=""></a></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="659" alt=""></td>
+			<img src="images/spacer.gif" width="1" height="682" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="3">
-			<img src="images/LizardExperience2013-1_02.gif" width="413" height="41" alt=""></td>
+			<img src="images/LizardExperience2013-1_02.gif" width="422" height="41" alt=""></td>
 		<td rowspan="2">
 			<a href="http://www.lizard.net/aanmelden2013/">
-				<img src="images/LizardExperience2013-1_03.gif" width="203" height="53" border="0" alt=""></a></td>
+				<img src="images/LizardExperience2013-1_03.gif" width="200" height="52" border="0" alt=""></a></td>
 		<td rowspan="4">
-			<img src="images/LizardExperience2013-1_04.gif" width="78" height="172" alt=""></td>
+			<img src="images/LizardExperience2013-1_04.gif" width="81" height="184" alt=""></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="41" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="3">
-			<img src="images/LizardExperience2013-1_05.gif" width="89" height="131" alt=""></td>
+			<img src="images/LizardExperience2013-1_05.gif" width="99" height="143" alt=""></td>
 		<td rowspan="2">
 			<a href="http://www.lizard.net/lizardexperience/">
-				<img src="images/LizardExperience2013-1_06.gif" width="83" height="22" border="0" alt=""></a></td>
+				<img src="images/LizardExperience2013-1_06.gif" width="79" height="20" border="0" alt=""></a></td>
 		<td rowspan="3">
-			<img src="images/LizardExperience2013-1_07.gif" width="241" height="131" alt=""></td>
+			<img src="images/LizardExperience2013-1_07.gif" width="244" height="143" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="12" alt=""></td>
+			<img src="images/spacer.gif" width="1" height="11" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="2">
-			<img src="images/LizardExperience2013-1_08.gif" width="203" height="119" alt=""></td>
+			<img src="images/LizardExperience2013-1_08.gif" width="200" height="132" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="10" alt=""></td>
+			<img src="images/spacer.gif" width="1" height="9" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/LizardExperience2013-1_09.gif" width="83" height="109" alt=""></td>
+			<img src="images/LizardExperience2013-1_09.gif" width="79" height="123" alt=""></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="109" alt=""></td>
+			<img src="images/spacer.gif" width="1" height="123" alt=""></td>
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
