--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <table id="Table_01" width="704" height="866" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td colspan="5">
-			<a href="www.lizard.net/aanmelden2013">
+			<a href="http://www.lizard.net/aanmelden2013">
 				<img src="images/LizardExperience2013-1_01.gif" width="703" height="682" border="0" alt=""></a></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="682" alt=""></td>
